# Mini_Shogi

./: .gitignore  Assets.idraw  Cargo.toml  README.md
src/: README.md  action.rs  ai.rs  ai_minimax.rs  ai_monte_carlo.rs  ai_monte_carlo_tree OLD.rs  ai_monte_carlo_tree.rs  ai_random.rs  ai_sender.rs  asset_loader.rs  board.rs  button.rs  controller.rs  game.rs  image.rs  lerp.rs  main.rs  message_sender.rs  piece.rs  player.rs  resource_loader.rs  slider.rs  sprite.rs  sprite_OLD.rs  sprite_old.rs  text.rs  view.rs  view_game.rs  view_gameOLD.rs  view_intro.rs  view_rules.rs  view_settings.rs  widget_button.rs  widget_button_bar.rs  widget_container.rs  widget_message.rs  widget_slider.rs
src/view/: animators.rs  button.rs  button2.rs  button3.rs  button_alt.rs  button_bar.rs  container.rs  draw_text.rs  draw_texture.rs  drawable.rs  eventable.rs  image.rs  label.rs  mod.rs  slider.rs  sprite.rs  transform.rs  view.rs  view_about.rs  view_game.rs  view_intro.rs  view_rules.rs  view_settings.rs
