[package]
name = "yokai"
version = "0.1.0"
edition = "2021"
description = "The game of Yokai."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#slotmap = "1.0.6"
macroquad = "0.3"
fastrand = "1.7.0"
num-format = "0.4.0" # converts integers to comma-separated strings

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for my code:
[profile.dev.package."*"]
opt-level = 3

# This is for the cargo-bundle crate.
[package.metadata.bundle]
name = "Yokai"
identifier = "com.electronzen.Yokai"
version = "1.0.0"
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Game"