[package]
name = "mini_shogi"
version = "0.1.0"
edition = "2021"
description = "The game of Mini Shogi, a simplified, faster version of Shogi."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
fastrand = "1.7.0"
num-format = "0.4.0" # converts integers to comma-separated strings

# Enable only a small amount of optimization in debug mode:
[profile.dev]
opt-level = 1

# Enable small optimizations for dependencies:
[profile.dev.package."*"]
opt-level = 1

# This is for the cargo-bundle crate:
[package.metadata.bundle]
name = "Mini Shogi"
identifier = "com.electronzen.MiniShogi"
version = "0.1.0"
copyright = "Free and open source."
category = "Game"